--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "next-auth": "^5.0.0-beta.18",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
+    "typescript": "^5.9.3"
   }
 }
