--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "framer-motion": "^12.23.24",
     "next": "14.1.0",
     "next-auth": "^5.0.0-beta.7",
     "react": "18.2.0",
