--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "framer-motion": "^12.23.24",
+    "googleapis": "^166.0.0",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.7",
+    "next-auth": "4.24.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.6",
-    "typescript": "^5.9.3"
+    "@types/node": "^20.11.17",
+    "@types/react": "^18.2.12",
+    "typescript": "^5.4.0"
   }
 }
