--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
         "*"
       ]
     },
+    
+    "types": ["next-auth"],
+    "typeRoots": ["./types", "./node_modules/@types"],
     "incremental": true,
     "plugins": [
       {
